--- a/01_Bruitages/index.html
+++ b/01_Bruitages/index.html
@@ -3,14 +3,14 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Bruitages</title>
+        <title>Bruitages Site</title>
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
 
     <body>
         <header>
             <h2>Chaque touche correspond à un bruitage</h2>
-        </header>
+        </header>  
 
         <div class="keys">
             <div data-key="65" class="key">
