--- a/01_Bruitages/index.html
+++ b/01_Bruitages/index.html
@@ -3,13 +3,14 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Bruitages Site</title>
+        <title>Bruitages</title>
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
 
     <body>
         <header>
-            <h2>Chaque touche correspond à un bruitage</h2>
+            <h1>Bruitages</h1>
+            <h4>Chaque touche correspond à un bruitage</h4>
         </header>  
 
         <div class="keys">
