--- a/02_Horloge/index.html
+++ b/02_Horloge/index.html
@@ -11,13 +11,17 @@
         <header>
             <h1>Horloge</h1>
         </header>  
+        <!-- <div class="horloge2">
+            <canvas id="horloge" width="400", height="400"></canvas>
+        </div> -->
         <div class="horloge">
             <div class="cadran">
+                <canvas id="horloge" width="400", height="400"></canvas>
                 <div class="aiguille aiguille-heure"></div>
                 <div class="aiguille aiguille-minute"></div>
                 <div class="aiguille aiguille-seconde"></div>
             </div>
-            <div class="cercle"></div>
+            <div class="cercle"> </div>
         </div>
 
 
